matroskadec: use av_grow_packet in merge_packets.

It ensures that the packet is properly padded
and makes the code simpler.

Fixes trac ticket #1223.